--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "description": "textlint用",
   "devDependencies": {
-    "textlint": "^14.0.0",
-    "textlint-rule-preset-ja-technical-writing": "^10.0.0"
+    "textlint": "^14.0.3",
+    "textlint-rule-preset-ja-technical-writing": "^10.0.1"
   },
   "scripts": {
-    "lint": "textlint --cache ./*.md"
+    "textlint": "textlint --cache ./*.md"
   }
 }
