--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "devDependencies": {
-    "textlint": "^14.0.3",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
+    "@commitlint/types": "^19.0.3",
+    "husky": "^9.0.11",
+    "prettier": "3.2.5",
+    "textlint": "^14.0.4",
     "textlint-rule-preset-ja-technical-writing": "^10.0.1"
   },
   "scripts": {
-    "textlint": "textlint --cache ./*.md"
+    "textlint": "textlint --cache ./*.md",
+    "lint:prettier": "prettier --check .",
+    "fmt:prettier": "prettier --write .",
+    "prepare": "husky"
   }
 }
